Changed font size, added image preview to posts and lot more

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,14 +5,14 @@
 {% endif %}
 
 <img src="{{ user.avatar_url }}" class="circle mb-3" style="max-width: 150px;">
-<h1 class="{% if site.style == 'dark' %}text-white{% endif %} mb-2 lh-condensed">{% if user.name %}{{ user.name }}{%
+<h1 class="{% if site.style == 'dark' %}text-white{% endif %} mb-2 f0-light">{% if user.name %}{{ user.name }}{%
   else %}{{ user.login }}{% endif %}</h1>
-<p class="mb-3 f4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">
+<p class="mb-3 f3-light {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">
   {{ user.bio }}
 </p>
 
 {% if include.metadata %}
-<div class="f4 mb-6">
+<div class="f3-light mb-6">
   {% if user.name %}
   <div class="{{ metadata_styles }}">
     {% octicon mark-github height:20 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:GitHub %}
@@ -35,6 +35,24 @@
     {{ user.location }}
   </div>
   {% endif %}
+  <div class="{{ metadata_styles }} {% if site.style == 'dark' %}text-white{% endif %}">
+    {% octicon home height:20 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:Writings %}
+    <a href="/" {% if site.style=='dark' %}class="text-white" {% endif %}>
+      Home
+    </a>
+  </div>
+  <div class="{{ metadata_styles }} {% if site.style == 'dark' %}text-white{% endif %}">
+    {% octicon pencil height:20 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:Writings %}
+    <a href="/writings/" {% if site.style=='dark' %}class="text-white" {% endif %}>
+      Writings
+    </a>
+  </div>
+  <div class="{{ metadata_styles }} {% if site.style == 'dark' %}text-white{% endif %}">
+    {% octicon device-camera height:20 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:Photographs %}
+    <a href="/photojournalism/" {% if site.style=='dark' %}class="text-white" {% endif %}>
+      Photographs
+    </a>
+  </div>
   {% if site.social_media %}
   <div
     class="d-flex flex-wrap flex-items-start {% if site.layout == 'stacked' %}flex-justify-center mt-1 mt-md-3{% endif %}">
@@ -50,6 +68,7 @@
     {% endfor %}
   </div>
   {% endif %}
+
   <!-- {% if user.hireable %}
   <span title="Collaborate with me" class="d-inline-block f5 rounded-2 text-white bg-green py-1 px-2">Message me for
     collaborations!</span>
