--- a/_includes/research.html
+++ b/_includes/research.html
@@ -1,5 +1,6 @@
-<h2 {% if site.style=='dark' %}class="text-white" {% endif %}>My Research</h2>
-<p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">My recent research projects,
+<h2 class="{% if site.style=='dark' %}text-white{% endif %} f1-light">My Research</h2>
+<p class="f3-light mb-3 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">My recent research
+    projects,
     both at NYU and beyond.
 </p>
 <script type="text/javascript">
@@ -11,7 +12,7 @@
 <div class="d-sm-flex flex-wrap gutter-condensed mb-4">
     {% for research in site.categories.research limit: 12 %}
     {{ forloop.index }}
-    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-3">
+    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-1">
         {% include research-card.html %}
     </div>
     {% endfor %}
