--- a/_includes/thought-card.html
+++ b/_includes/thought-card.html
@@ -1,19 +1,25 @@
-<div
-  class="height-full text-left {% if site.style == 'dark' %}box-shadow{% else %}border border-gray-light{% endif %} bg-white rounded-1 p-3">
-  <div class="d-flex flex-justify-between flex-items-start mb-1">
-    <h1 class="f4 lh-condensed mb-1">
-      <a href="{{ site.baseurl }}{{ post.url }}">
-        {{ post.title }}
-      </a>
-    </h1>
+<div class="height-full d-flex container-lg clearfix flex-wrap flex-justify-between text-left {% if site.style == 'dark' %}box-shadow{% else %}border border-gray-light{% endif %} bg-white rounded-1 p-3">
+  {% if post.header_image %}
+  <div class="float-right col-sm-12 col-lg-4 p-3">
+    <img src="{{ post.header_image }}" class="width-fit rounded-2"/>
   </div>
-  <div class="text-gray mb-2 ws-normal">{{ post.date | date: "%b %d, %Y"}}</div>
-  <div class="mb-1" id="toggle-read-more-{{ forloop.index }}">
-    <p class="f4 mb-1">
-      {{ post.content | split: '<!--break-->' | first }}
-      {% if post.content contains '<!--break-->' %}
-      <a href="{{ post.url }}">read more</a>
-      {% endif %}
-    </p>
+  {% endif %}
+  <div class="float-right col-sm-12 col-lg-8 text-content">
+    <div class="d-flex flex-justify-between flex-items-start mb-1">
+      <h1 class="f1-light mb-1 mt-1">
+        <a href="{{ site.baseurl }}{{ post.url }}">
+          {{ post.title }}
+        </a>
+      </h1>
+    </div>
+    <div class="f4 text-gray mb-2 ws-normal">{{ post.date | date: "%b %d, %Y"}}</div>
+    <div class="f3-light mb-1" id="toggle-read-more-{{ forloop.index }}">
+      <p class="mb-1">
+        {{ post.content | split: '<!--break-->' | first }}
+        {% if post.content contains '<!--break-->' %}
+        <a href="{{ post.url }}">read more</a>
+        {% endif %}
+      </p>
+    </div>
   </div>
 </div>
