--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,104 +2,112 @@
 
 {% if site.layout == 'stacked' %}
 <div class="container-lg py-6 p-responsive text-center">
-  {% include masthead.html metadata=false %}
+    {% include masthead.html metadata=false %}
 
-  <div class="container-md f4 text-left border rounded-2 bg-white p-3 p-sm-5 mt-6">
-    <p class="f5"><a href="/" class="d-flex flex-items-center">{% octicon chevron-left height:16 class:"mr-2
-        v-align-middle" fill:#0366d6 aria-label:Home %}Home</a></p>
-    <h1 class="f00-light lh-condensed mb-5">{{ page.title }}</h1>
-    <div class="content_container">
-        <div class="masonry">
-            <div>
-            {% for gallery in site.galleries %} 
-            {% if gallery.name == page.title %}
-            {% for art in gallery.arts %}
-                <div class="masonry-panel">
-                    <a href="#{{ art.order }}" data-caption-desc="{{ art.description }}">
-                        <img src="{{ site.github.url }}/{{ art.image }}" alt="{{ art.title }}" class="zoom">
-                    </a>
-                </div>
-            {% endfor %} 
-            {% endif %} 
-            {% endfor %}
-            </div>
-        </div>
-
-        {% for gallery in site.galleries %} {% if gallery.name == page.title %} {% for art in gallery.arts %}
-        <aside class="small-12 columns">
-            <a href="#x" class="small-12 columns lightbox-overlay" id="{{ art.order }}"></a>
-            <div class="lightbox-popup center-text">
-                <div class="small-12 columns lightbox-nav-wrap">
-                    <div class="small-4 lightbox-nav">
-                        <a class="lightbox-prev" href="#{{ art.order | minus: 1 }}">&#171;</a>
-                    </div>
-                    <div class="small-4 lightbox-nav">
-                        <a class="lightbox-next" href="#{{ art.order | plus: 1 }}">&#187;</a>
-                    </div>
-                    <div class="small-4 lightbox-nav">
-                        <a class="lightbox-popup-close" href="#close">&times;</a>
-                    </div>
-                </div>
-                <div class="small-12 columns">
+    <div class="container-md f4 text-left border rounded-2 bg-white p-3 p-sm-5 mt-6">
+        <p class="f3"><a href="/" class="d-flex flex-items-center">{% octicon chevron-left height:16 class:"mr-2
+                v-align-middle" fill:#0366d6 aria-label:Home %}Home</a></p>
+        <h1 class="f00-light lh-condensed mb-5">{{ page.title }}</h1>
+        <div class="content_container">
+            <div class="masonry">
+                <div>
+                    {% for gallery in site.galleries %}
+                    {% if gallery.name == page.title %}
+                    {% for art in gallery.arts %}
                     <div class="masonry-panel">
-                        <div class="small-12 columns">
-                            <div class="columns">
-                                <a href="#{{ art.order | plus: 1 }}"><img class="lightbox-image"
-                                        src="{{ site.github.url }}/{{ art.image }}" alt="{{ art.title }}"></a>{% if
-                                art.description %}<p tabindex="0" class="lightbox-image-description">{{ art.description }}<a
-                                        class="lightbox-close-description">×</a></p>{% endif %}
-                                <figcaption class="lightbox-caption">{% if art.title %}{{ art.title }}{% endif %} {% if
-                                    art.artist %}- By {{ art.artist }}{% endif %}</figcaption>
+                        <a href="#{{ art.order }}" data-caption-desc="{{ art.description }}">
+                            <img src="{{ site.github.url }}/{{ art.image }}" alt="{{ art.title }}" class="zoom">
+                        </a>
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+
+            {% for gallery in site.galleries %} {% if gallery.name == page.title %} {% for art in gallery.arts %}
+            <aside class="small-12 columns">
+                <a href="#x" class="small-12 columns lightbox-overlay" id="{{ art.order }}"></a>
+                <div class="lightbox-popup center-text">
+                    <div class="small-12 columns lightbox-nav-wrap">
+                        <div class="small-4 lightbox-nav">
+                            <a class="lightbox-prev" href="#{{ art.order | minus: 1 }}">&#171;</a>
+                        </div>
+                        <div class="small-4 lightbox-nav">
+                            <a class="lightbox-next" href="#{{ art.order | plus: 1 }}">&#187;</a>
+                        </div>
+                        <div class="small-4 lightbox-nav">
+                            <a class="lightbox-popup-close" href="#close">&times;</a>
+                        </div>
+                    </div>
+                    <div class="small-12 columns">
+                        <div class="masonry-panel">
+                            <div class="small-12 columns">
+                                <div class="columns">
+                                    <a href="#{{ art.order | plus: 1 }}"><img class="lightbox-image"
+                                            src="{{ site.github.url }}/{{ art.image }}" alt="{{ art.title }}"></a>{% if
+                                    art.description %}<p tabindex="0" class="lightbox-image-description">{{
+                                        art.description }}<a class="lightbox-close-description">×</a></p>{% endif %}
+                                    <figcaption class="lightbox-caption">{% if art.title %}{{ art.title }}{% endif %} {%
+                                        if
+                                        art.artist %}- By {{ art.artist }}{% endif %}</figcaption>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </aside>
-        {% endfor %} {% endif %} {% endfor %}
+            </aside>
+            {% endfor %} {% endif %} {% endfor %}
 
 
+        </div>
     </div>
-  </div>
 </div>
 
 {% else %}
 <div class="d-md-flex min-height-full {% unless site.style == 'dark' %}border-md-bottom{% endunless %}">
-  <div
-    class="flex-self-stretch {% if site.style == 'dark' %}bg-gray-dark{% else %}border-md-right border-gray-light bg-white{% endif %} col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6">
-    {% include masthead.html metadata=true %}
-  </div>
+    <div
+        class="flex-self-stretch {% if site.style == 'dark' %}bg-gray-dark{% else %}border-md-right border-gray-light bg-white{% endif %} col-md-5 col-lg-4 col-xl-3 px-4 px-md-6 px-lg-7 py-6">
+        {% include masthead.html metadata=true %}
+    </div>
 
-  <div class="col-md-7 col-lg-8 col-xl-9 px-4 py-6 px-lg-7 border-top border-md-top-0 bg-gray-light" {% if site.style=='dark' %} style="background-color: #2f363d !important" {% endif %}>
-    <div class="mx-auto" style="max-width: 960px;">
-      <div class="f4 {% if site.style == 'dark' %}text-white{% endif %} mb-6">
-        <div class="f4 {% if site.style == 'dark' %}text-white{% endif %}">
-          <p class="f5"><a href="{{ site.url }}{{ site.baseurl | append:'/' }}"
-              class="d-flex flex-items-center {% if site.style == 'dark' %}text-white{% endif %}">{% octicon
-              chevron-left height:16 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:Home %}Home</a></p>
-          <h1 class="f00-light lh-condensed mb-5">{{ page.title }}</h1>
-          <div class="content_container">
-            <div class="masonry">
-                <div class="clearfix flex-md-row flex-items-center d-flex flex-wrap flex-justify-center {% if site.style == 'dark' %}text-white{% endif %}">
-                {% for gallery in site.galleries %} 
-                {% if gallery.name == page.title %}
-                {% for art in gallery.arts %}
-                    <div class="d-flex col-md-12 col-lg-6 col-xl-4 mx-auto mb-4 mr-2 flex-items-center flex-justify-center ">
-                        <a href="#{{ art.order }}" data-caption-desc="{{ art.description }}" class="d-flex flex-items-center flex-justify-center mx-auto">
-                            <img src="/{{ art.image }}" alt="{{ art.title }}" class="width-full rounded-2 anim-hover-grow mx-auto">
-                        </a>
+    <div class="col-md-7 col-lg-8 col-xl-9 px-4 py-6 px-lg-7 border-top border-md-top-0 bg-gray-light" {% if
+        site.style=='dark' %} style="background-color: #2f363d !important" {% endif %}>
+        <div class="mx-auto" style="max-width: 960px;">
+            <div class="f4 {% if site.style == 'dark' %}text-white{% endif %} mb-6">
+                <div class="f4 {% if site.style == 'dark' %}text-white{% endif %}">
+                    <p class="f3-light"><a href="{{ site.url }}{{ site.baseurl | append:'/' }}"
+                            class="d-flex flex-items-center {% if site.style == 'dark' %}text-white{% endif %}">{%
+                            octicon
+                            chevron-left height:16 class:"mr-2 v-align-middle" fill:{{ icon_color }} aria-label:Home
+                            %}Home</a></p>
+                    <h1 class="f00-light lh-condensed mb-5">{{ page.title }}</h1>
+                    <div class="content_container">
+                        <div class="masonry">
+                            <div
+                                class="clearfix flex-md-row flex-items-center d-flex flex-wrap flex-justify-center {% if site.style == 'dark' %}text-white{% endif %}">
+                                {% for gallery in site.galleries %}
+                                {% if gallery.name == page.title %}
+                                {% for art in gallery.arts %}
+                                <div
+                                    class="d-flex col-md-12 col-lg-6 col-xl-4 mx-auto mb-4 mr-2 flex-items-center flex-justify-center m-1 p-1 anim-hover-grow">
+                                    <a href="#{{ art.order }}" data-caption-desc="{{ art.description }}"
+                                        class="d-flex flex-items-center flex-justify-center mx-auto">
+                                        <img src="/{{ art.image }}" alt="{{ art.title }}"
+                                            class="width-full rounded-2 mx-auto">
+                                    </a>
+                                </div>
+                                {% endfor %}
+                                {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
+
                     </div>
-                {% endfor %} 
-                {% endif %} 
-                {% endfor %}
                 </div>
             </div>
-
-          </div>  
         </div>
-      </div>
     </div>
-  </div>
 </div>
 {% endif %}
 
