--- a/_includes/thoughts.html
+++ b/_includes/thoughts.html
@@ -1,5 +1,6 @@
-<h2 {% if site.style=='dark' %}class="text-white" {% endif %}>My Writings</h2>
-<p class="f4 mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">Articles I've written.</p>
+<h2 class="{% if site.style=='dark' %}text-white{% endif %} f1-light">My Writings</h2>
+<p class="f3-light mb-4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">Articles I've written.
+</p>
 <div class="d-sm-flex flex-wrap gutter-condensed mb-4">
   {% for post in site.categories.writings limit: 6 %}
   <div class="col-sm-6 col-md-12 col-lg-6 col-xl-4 mb-3">
