--- a/_includes/thoughts.html
+++ b/_includes/thoughts.html
@@ -3,7 +3,7 @@
 </p>
 <div class="d-sm-flex flex-wrap gutter-condensed mb-4">
   {% for post in site.categories.writings limit: 6 %}
-  <div class="col-sm-6 col-md-12 col-lg-6 col-xl-4 mb-3">
+  <div class="col-sm-6 col-md-12 col-lg-6 mb-3">
     {% include post-card.html %}
   </div>
   {% endfor %}
